--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en-US">
+
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -18,10 +19,12 @@
     <div style="margin-top: 80px;" class="jumbotron text-center">
       <h1 class="display-4">Note Taker <span role="img" aria-label="Memo">📝</span></h1>
       <h4 class="mt-4">Take notes with Express</h4>
-      <a class="btn btn-primary btn-lg mt-4" href="/Develop/public/notes.html" role="button">Get Started</a>
+
+<!--   This button takes the client to the "notes.html" page when clicked.     -->
+      <a class="btn btn-primary btn-lg mt-4" href="./notes.html" role="button">Get Started</a>
     </div>
   </div>
-  <script src="/assets/js/index.js"></script>
+  <script src="./assets/js/index.js"></script>
 </body>
 
 </html>
